tests/e2e/keyword_not_service_argument.error
Error: syntax error in story at line 1, column 13

1|    http server from: "" not: "" // Idea is to demonstrate argument `not` is parsed successfully.
                  ^^^^^^^^

E0141: http action `server` does not accept argument `from`.
